# djangoProjects

./: README.md  manage.py  pyproject.toml
YouTube/: url.txt
YouTube/samsite/mainApp/: urls.py  views.py
YouTube/samsite/samsite/: asgi.py  settings.py  urls.py  wsgi.py
bootstrap_html/: apps.py  urls.py  views.py
bootstrap_html/templates/: bootstrap_html_template.html
bootstrap_manual_website/: apps.py  urls.py  views.py
bootstrap_manual_website/templates/: bootstrap_manual_website.html
crypto_website/: admin.py  apps.py  models.py  urls.py  views.py
crypto_website/migrations/: 0001_initial.py
crypto_website/templates/: crypto_site.html
mainpage/: views.py
mainpage/templates/: index.html
simple_html/: apps.py  urls.py  views.py
simple_html/templates/: simple_html.html
simple_html_withModels/: apps.py  models.py  urls.py  views.py
simple_html_withModels/migrations/: 0001_initial.py
simple_html_withModels/templates/: simple_html_withModels.html
simple_print/: apps.py  urls.py  views.py
times/: models.py  urls.py  views.py
times/migrations/: 0001_initial.py
times/templates/: index.html
variousApps/: asgi.py  settings.py  urls.py  wsgi.py
