[tool.poetry]
name = "djangoprojects"
version = "0.1.0"
description = ""
authors = ["Sambiase <marsamb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.4"
djlint = "^1.19.10"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
